--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ class FlappyBirdObject {
   }
 
   _HandleInput(timeElapsed, keys) {
-    if (!Phaser.Input.Keyboard.JustDown(keys.up)) {
+    if (!Phaser.Input.Keyboard.JustDown(keys.space)) {
       return;
     }
 
